# scilab2c

./: .gitignore  ChangeLog  DESCRIPTION  FILES  Makefile  Makefile.in  README  TODO  builder.sce  configure  cosine.sci  loader.sce  main.c  readme_visual.txt  scilab2c.sln  scilab2c.sln.txt  scilab2c_f2c.sln  unloader.sce
scilab2c/src/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
scilab2c/src/Scilab2C/: FunAnnotationExample.sci
scilab2c/src/auxiliaryFunctions/: Makefile.am  Makefile.in
scilab2c/src/elementaryFunctions/: Makefile  Makefile.am  Makefile.in  elementaryFunctions.vcproj
scilab2c/src/implicitList/: Makefile.in
scilab2c/src/includes/: lapack.h  machine.h.in
scilab2c/src/matrixOperations/: Makefile  Makefile.am  Makefile.in  matrixMultiplication.c  matrixOperations.vcproj  matrixSubtraction.h  testDoubleMatrixMultiplication.c  testFloatMatrixMultiplication.c  testMatrixAddition.c  testMatrixSubtraction.c
scilab2c/src/operations/: Makefile.am  Makefile.in
scilab2c/src/signalProcessing/: Makefile.am  Makefile.in
scilab2c/src/statisticsFunctions/: Makefile.am  Makefile.in
scilab2c/src/string/: Makefile  Makefile.am  Makefile.in
scilab2c/src/test/: Makefile  Makefile.am  test.c  test.h  testCos.c  testCos.h  testCosh.c  testIsEmpty.c  testSin.c  testSinh.c  testTan.h  testTanh.c  testTanh.h
scilab2c/src/type/: Makefile  Makefile.in  doubleComplex.c  doubleComplex.h  floatComplex.c  floatComplex.h  testDoubleComplex.c  testFloatComplex.c
src/: Makefile  Makefile.am  Makefile.in  configure  configure.ac
src/Scilab2C/Annotations/: InitializeLibraryAnnotations.sci
src/Scilab2C/FunctionTableManagement/: AddBranch.sci  AddElementaryFunction.sci  AddLeafAtan.sci  AddLeafDet.sci  Example.sce  GenerateLibTrees.sci  GetCFunCall.sci  Readme.txt  main.sci
src/Scilab2C/GeneralFunctions/: FunName2SciFileName.sci  PrintStringInfo.sci  SCI2Cstrncmps1size.sci  dispina.sci
src/Scilab2C/SCI2CGeneral/: Array2String.sci  SCI2CInputParameters.sce  UpdateSCI2CInfo.sci
src/Scilab2C/Scilab2C/: LaunchRunSCI2C.sci  full_reset.sce  runsci2c.sci  runscicode.sci
src/auxiliaryFunctions/: Makefile  Makefile.am  Makefile.in
src/auxiliaryFunctions/abs/: Makefile.am  Makefile.in  cabsa.c  cabss.c  dabsa.c  testAbs.c  testAbs.h  zabsa.c
src/auxiliaryFunctions/conj/: cconja.c  zconja.c  zconjs.c
src/auxiliaryFunctions/find/: Makefile  Makefile.in  cfinda.c  dfinda.c  sfinda.c  testFind.c  zfinda.c
src/auxiliaryFunctions/find2d/: cfind2da.c
src/auxiliaryFunctions/frexp/: Makefile.am  sfrexps.c
src/auxiliaryFunctions/includes/: abs.h  conj.h  find2d.h  frexp.h  isEmpty.h  isempty.h  isnan.h  length.h  max.h  pythag.h  sign.h
src/auxiliaryFunctions/interfaces/: int_abs.h  int_conj.h  int_min.h
src/auxiliaryFunctions/isempty/: Makefile  Makefile.am  Makefile.in  cisemptya.c  disemptya.c  sisemptya.c  testIsEmpty.c  testIsEmpty.h  zisemptya.c
src/auxiliaryFunctions/isnan/: Makefile.am  Makefile.in  cisnans.c  disnans.c  testIsNan.c  testIsNan.h  zisnans.c
src/auxiliaryFunctions/pythag/: Makefile.am  Makefile.in  spythags.c  zpythags.c
src/auxiliaryFunctions/rand/: Makefile.am  Makefile.in  testRand.h  zranda.c  zrands.c
src/auxiliaryFunctions/sign/: Makefile  Makefile.am  Makefile.in  csigns.c  dsigna.c  sign.h  ssigna.c  ssigns.c  testSign.c  zsigna.c
src/auxiliaryFunctions/size/: Makefile.in
src/auxiliaryFunctions/type/: Makefile.in
src/c/: Makefile.in
src/c/auxiliaryFunctions/: Makefile.in  auxiliaryFunctions.vcxproj
src/c/elementaryFunctions/: Makefile.in  elementaryFunctions.vcproj  elementaryFunctions.vcxproj  elementaryFunctions.vcxproj.filters
src/c/implicitList/: Makefile.am  Makefile.in  dimplicitLists.c  implicitList.vcxproj
src/c/matrixOperations/: Makefile.in  matrixOperations.vcproj
src/c/operations/: Makefile.in  matrixOperations_Import.def  operations.vcxproj.filters
src/c/signalProcessing/: Makefile.in  signalProcessing.vcproj  signalProcessing.vcxproj.filters
src/c/statisticsFunctions/: Makefile.in  statisticsFunctions.vcxproj
src/c/string/: Makefile.in  string.vcproj  string.vcxproj  string.vcxproj.filters
src/c/type/: doubleComplex.h  floatComplex.h  int_imag.h  int_real.h  type.vcxproj.filters  types.h
src/elementaryFunctions/: Makefile  Makefile.am  Makefile.in
src/elementaryFunctions/acos/: Makefile  Makefile.am  Makefile.in  acos.h  cacosa.c  cacoss.c  dacoss.c  sacosa.c  sacoss.c  testAcos.h  testCplxAcos.c  testDoubleAcos.c  zacoss.c
src/elementaryFunctions/acosh/: Makefile.am  Makefile.in  dacosha.c  sacoshs.c  testDoubleAcosh.c  testFloatAcosh.c  zacoshs.c
src/elementaryFunctions/asin/: Makefile.am  Makefile.in  casina.c  casins.c  sasina.c  testAsin.c  testDoubleAsin.c  testFloatAsin.c  zasina.c
src/elementaryFunctions/asinh/: Makefile.am  Makefile.in  casinhs.c  dasinhs.c  sasinhs.c  testAsinh.h  testDoubleAsinh.c  testFloatAsinh.c  zasinhs.c
src/elementaryFunctions/atan/: Makefile  Makefile.am  Makefile.in  catans.c  testDoubleAtan.c  testFloatAtan.c
src/elementaryFunctions/atan2/: Makefile  Makefile.am
src/elementaryFunctions/atanh/: Makefile.am  Makefile.in  datanha.c  satanhs.c  testDoubleAtanh.c  (+1 more)
src/implicitList/: Makefile.am  Makefile.in  implicitList.h
src/includes/: blas.h  constant.h  lapack.h  machine.h  machine.h.in
src/matrixOperations/: Makefile.am  Makefile.in  matrixSubtraction.c  testMatrixMultiplication.c
src/operations/: Makefile.in  operations.vcproj
src/python/: serverWP.py
src/signalProcessing/: Makefile.am  Makefile.in
src/statisticsFunctions/: Makefile.am  Makefile.in  statisticsFunctions.vcproj
src/string/: Makefile  Makefile.am  Makefile.in
src/test/: Makefile  Makefile.in  test.c  test.h  testCos.c  testCosh.c  testCosh.h  testExp.c  testFind.c  testIsEmpty.c  testSin.c  testSin.h  testSinh.c  testTan.c
src/type/: Makefile  Makefile.am  Makefile.in  doubleComplex.c  doubleComplex.h  doubleComplexC99.h  floatComplex.c  floatComplex.h  floatComplexC99.h  testDoubleComplex.c  testFloatComplex.c  type.vcproj
(+7316 files in other folders)
