##
##  -*- makefile -*-
##
## Makefile.am
## Made by  Bruno JOFRET <bruno.jofret@inria.fr>
##
## Started on  Thu Mar 22 16:39:30 2007 jofret
## Last update Fri Apr 20 16:10:39 2007 jofret
##
## Copyright INRIA 2007
##

AUTOMAKE_OPTIONS = 1.9 dist-zip dist-bzip2

SUBDIRS=	type \
		elementaryFunctions \
		auxiliaryFunctions

ACLOCAL_AMFLAGS = -I m4/