##
##  -*- makefile -*-
##
## Makefile.am
## Made by  Bruno JOFRET <bruno.jofret@inria.fr>
##
## Started on  Thu Mar 22 16:39:30 2007 jofret
## Last update Sun Mar 25 12:17:35 2007 bruno
##
## Copyright INRIA 2007
##

SUBDIRS=	cos \
		sin \
		tan \
		cosh \
		sinh \
		tanh \
		acos \
		asin \
		exp \
		log \
		sqrt
