##
##  -*- makefile -*-
##
## Makefile.am
## Made by  Bruno JOFRET <bruno.jofret@inria.fr>
##
## Started on  Thu Mar 22 16:39:30 2007 jofret
## Last update Thu Sep  6 14:22:15 2007 bruno
##
## Copyright INRIA 2007
##

SUBDIRS=	cos \
		cosh \
		acos \
		acosh \
		sin \
		sinh \
		asin \
		asinh \
		tan \
		tanh \
		atan \
		atanh \
		exp \
		exp10 \
		log \
		log10 \
		sqrt
