##
##  -*- makefile -*-
##
## Makefile.am
## Made by  Bruno JOFRET <bruno.jofret@inria.fr>
##
## Started on  Thu Nov 30 16:33:40 2006 jofret
## Last update Sun Mar 25 22:21:10 2007 bruno
##
## Copyright INRIA 2006
##

check_PROGRAMS = testCos

testCos_SOURCES = testCos.c
testCos_LDADD = libCos.a libDoubleComplex.a

TESTS = testCos

